; ModuleID = '/home/carl/AnghaBench/htop/extr_ScreenManager.c_ScreenManager_new.c'
source_filename = "/home/carl/AnghaBench/htop/extr_ScreenManager.c_ScreenManager_new.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32, i32, i32, i32, i32, i32*, i32*, i64, i32, i32 }

@Panel = common dso_local global i32 0, align 4
@DEFAULT_SIZE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @ScreenManager_new(i32 %0, i32 %1, i32 %2, i32 %3, i32 %4, i32* %5, i32* %6, i32 %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i32, align 4
  %17 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %9, align 4
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32* %5, i32** %14, align 8
  store i32* %6, i32** %15, align 8
  store i32 %7, i32* %16, align 4
  %18 = call %struct.TYPE_4__* @xMalloc(i32 56)
  store %struct.TYPE_4__* %18, %struct.TYPE_4__** %17, align 8
  %19 = load i32, i32* %9, align 4
  %20 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %21 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %20, i32 0, i32 0
  store i32 %19, i32* %21, align 8
  %22 = load i32, i32* %10, align 4
  %23 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 1
  store i32 %22, i32* %24, align 4
  %25 = load i32, i32* %11, align 4
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i32 0, i32 2
  store i32 %25, i32* %27, align 8
  %28 = load i32, i32* %12, align 4
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 3
  store i32 %28, i32* %30, align 4
  %31 = load i32, i32* %13, align 4
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 10
  store i32 %31, i32* %33, align 4
  %34 = load i32, i32* @Panel, align 4
  %35 = call i32 @Class(i32 %34)
  %36 = load i32, i32* %16, align 4
  %37 = load i32, i32* @DEFAULT_SIZE, align 4
  %38 = call i32 @Vector_new(i32 %35, i32 %36, i32 %37)
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %40 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %39, i32 0, i32 9
  store i32 %38, i32* %40, align 8
  %41 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 8
  store i64 0, i64* %42, align 8
  %43 = load i32*, i32** %14, align 8
  %44 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %45 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %44, i32 0, i32 7
  store i32* %43, i32** %45, align 8
  %46 = load i32*, i32** %15, align 8
  %47 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %48 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %47, i32 0, i32 6
  store i32* %46, i32** %48, align 8
  %49 = load i32, i32* %16, align 4
  %50 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 4
  store i32 %49, i32* %51, align 8
  %52 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  %53 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %52, i32 0, i32 5
  store i32 1, i32* %53, align 4
  %54 = load %struct.TYPE_4__*, %struct.TYPE_4__** %17, align 8
  ret %struct.TYPE_4__* %54
}

declare dso_local %struct.TYPE_4__* @xMalloc(i32) #1

declare dso_local i32 @Vector_new(i32, i32, i32) #1

declare dso_local i32 @Class(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
